# api/swagger.json
@@ -59,6 +59,29 @@
       }
     },
 
+    "/auth/loginAndRevoke": {
+      "post": {
+        "operationId": "user_loginAndRevoke",
+        "tags": ["auth"],
+        "description": "用户登录。这个方法会让登录用户的其他 token 失效。登录后会返回 AccessToken。",
+        "parameters": [
+          {
+            "name": "credentials",
+            "description": "登录凭证",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/Login"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/Success"
+          }
+        }
+      }
+    },
+
     "/auth/login": {
       "post": {
         "operationId": "user_login",
